welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:10: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
	2 * biscuits = caseOrange + 1
          ^