welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() 
{
var caseOrange=0
var biscuits=0

while(!estSurBiscuit)
{
	avance()
	2 * biscuits = caseOrange + 1
}



}
